Fix heatmap and graph spacing issues due to flex. Plus add dynamic size to heatmap (clamped ofc). Voila.

--- a/src/pages/Profile/HeatMap.css
+++ b/src/pages/Profile/HeatMap.css
@@ -1,25 +1,22 @@
 .heatmap-container {
     display: flex;
+    margin: auto;
     border-radius: 1em;
     background-color: var(--bg);
     width: max-content;
-    height: fit-content;
 }
 
 .heatmap-month {
     box-sizing: border-box;
     display: grid;
     grid-auto-flow: column;
-    height: 100%;
     grid-template-rows: repeat(7, 1fr);
-    grid-auto-rows: 1fr; 
     gap: 2px;
-    /* background-color: var(--bg); */
     padding: clamp(3px, 1vw, 7px);
 }
 
 .heatmap-day {
-    width: 10px;
+    width: clamp(10px, 0.8vw, 15px);
     aspect-ratio: 1;
     background-color: var(--primary);
     border-radius: 0.2em;
